# property-price-lookup

./: .gitignore  README.md  app.py  pyproject.toml
config/: settings.py
src/database/: db_manager.py  schema.py
src/ml/: feature_engineering.py  model_trainer.py  predictor.py
src/scraper/: athome_scraper.py  base_scraper.py  homes_scraper.py  rakuten_scraper.py  suumo_scraper.py
src/utils/: helpers.py  image_downloader.py
